# audiogene-genetics

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  config.yaml
inc/: CPPLINT.cfg  audience.hpp  blockingqueue.hpp  concurrentqueue.h  genetics.hpp  individual.hpp  instruction.hpp  lightweightsemaphore.h  math.hpp  midi.hpp  musician.hpp  osc.hpp  performance.hpp  population.hpp  preference.hpp  spi.hpp
src/: CMakeLists.txt  genetics.cpp  individual.cpp  instruction.cpp  main.cpp  midi.cpp  osc.cpp  performance.cpp  population.cpp  spi.cpp
test/: CMakeLists.txt  testGenetics.cpp  testIndividual.cpp  testInstruction.cpp  testMath.cpp  testMidi.cpp  testOsc.cpp  testPerformance.cpp  testPopulation.cpp
