set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_COMPILER "/usr/local/bin/clang++")
set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-checks=*,-fuchsia-default-arguments-calls,-fuchsia-trailing-return")
add_executable(audiogene osc.cpp spi.cpp midi.cpp instruction.cpp individual.cpp genetics.cpp population.cpp performance.cpp main.cpp)
target_compile_options(audiogene PUBLIC -Wall -Wextra -Wpedantic -Werror)
find_package(gflags REQUIRED)
find_package(yaml-cpp REQUIRED)
find_library(lo REQUIRED)  #OSC
find_package(spdlog REQUIRED)
find_library(wiringPi REQUIRED)
find_library(RtMidi REQUIRED)
target_include_directories(audiogene PRIVATE ../inc)
include_directories(../inc)
target_link_libraries(audiogene gflags yaml-cpp lo wiringPi pthread rtmidi)
install(TARGETS audiogene DESTINATION local/bin)
